# botbot

./: .gitignore  긴거.md
cold-clear/: .gitignore  긴거.md
cold-clear/automation/: Cargo.toml  README.md  config.dry-run.example.json  config.example.json  launcher-state.example.json  launcher-state.json  live-snapshot.json  package-lock.json  package.json  scan-config.solo-1080p.json  scan-config.vs-left-1080p.json  vs-ws-bridge.json  ws-live-candidates.jsonl
cold-clear/automation/browser-source/: browser-cdp-input.mjs  browser-cdp-input.test.mjs  chromium-launch.mjs  chromium-launch.test.mjs  ddd-ws-observer.mjs  ddd-ws-observer.test.mjs  tetrio-browser-host.mjs  tetrio-browser-host.test.mjs  tetrio-cdp-source.mjs  tetrio-cdp-source.test.mjs  tetrio-queue.mjs  tetrio-state.mjs  tetrio-state.test.mjs  tetrio-websocket-seed-source.mjs  tetrio-ws-seed.mjs  tetrio-ws-seed.test.mjs  vs-ws-bridge.mjs  vs-ws-bridge.test.mjs
cold-clear/automation/debug/: tetrio-state-dump.json
cold-clear/automation/scripts/: calibrate_regions.py  screen_scanner.py
cold-clear/automation/src/: browser_source.rs  config.rs  driver.rs  launcher.rs  main.rs  paths.rs  runner.rs  runtime.rs  scanner.rs  sprint.rs  vs_sim.rs
cold-clear/automation/test-fixtures/: solo-eject-state.json  vs-nickname-selector.json  vs-no-piece-counter.json  vs-two-players-left-local.json  vs-two-players-right-local.json
cold-clear/bot/src/: lib.rs
cold-clear/cold-clear/: Cargo.toml
cold-clear/cold-clear/automation/: README.md  launcher-state.json  live-snapshot.json  sample-snapshot.json
(+8 files in other folders)
