[package]
name = "automation"
version = "0.1.0"
edition = "2021"

[dependencies]
cold-clear = { path = "../bot" }
libtetris = { path = "../libtetris" }
anyhow = "1"
eframe = "0.29"
enumset = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[dev-dependencies]
tempfile = "3"
